@@ -6,6 +6,7 @@
         - SeaMonkey 2.0 (minimum is now 2.1)
     * Add compatibility with SeaMonkey 2.5
     * Fix QuickWhois being unreadable with some themes
+    * Fix options window on OS X
 
 2011-11-25:
     * version 0.8.4
